[project]
name = "shellrecharge"
version = "0.1.27"
description = "Python 3 package to retrieve public and private EV charger data from Shell Recharge"
authors = [
    {name = "cyberjunky", email = "ron@cyberjunky.nl"},
]
dependencies = [
    "aiohttp",
    "aiohttp_retry",
    "yarl",
    "pydantic>=1.0.0, <3.0.0",
    "bs4",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/cyberjunky/python-shellrecharge"
"Bug Tracker" = "https://github.com/cyberjunky/python-shellrecharge/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
build = "pdm build"
publish = {composite = ["build", "twine upload dist/*"]}

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# Ignore missing imports for packages that may not be installed or lack type stubs
ignore_missing_imports = true

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "black",
    "isort",
    "types-beautifulsoup4",
    "twine>=6.2.0",
]
